--- a/README
+++ b/README
@@ -1,9 +1,10 @@
-= SkyFireEMU 4.0.6a -- General information =
+= UnderCore 4.0.6a -- General information =
 
 Copyright (C) MaNGOS      (http://www.getmangos.com)
 Copyright (C) TrinityCore (http://www.trinitycore.org)
 Copyright (C) Cactus      (http://www.cactusemu.com)
 Copyright (C) SkyFireEMU  (http://www.projectskyfire.org)
+Copyright (C) UnderCore (http://www.under-wow.ru/forums)
 
   SkyFireEMU is free software; you can redistribute it and/or modify
   it under the terms of the GNU General Public License as published by
